[tool.poetry]
name = "vy-lambda-tools"
version = "0.4.5"
description = ""
authors = ["Nicolas Harlem Eide <nicolas@harlemeide.net>"]
readme = "README.adoc"
packages = [{include = "vy_lambda_tools"}]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.32.0"
boto3-stubs = {extras = ["dynamodb", "ssm"], version = "^1.28.53"}
python-json-logger = "^2.0.7"
boto3 = "^1.28.53"

[tool.poetry.group.dev.dependencies]
moto = "^4.2.13"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
