[tool.poetry]
name = "vy-lambda-tools"
version = "0.5.0"
description = ""
authors = ["Nicolas Harlem Eide <nicolas@harlemeide.net>"]
readme = "README.adoc"
packages = [{include = "vy_lambda_tools"}]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^3.20.0"
python-json-logger = "^3.3.0"
boto3 = "^1.40.26"

[tool.poetry.group.dev.dependencies]
moto = "^4.2.13"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
ruff = "^0.0.291"
boto3-stubs = {version = "^1.40.27", extras = ["dynamodb", "ssm"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
